<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent"
        android:id="@+id/fragment_login_frame_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/ConstraintLayout">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@mipmap/eventerize"
                android:id="@+id/fragment_login_imageView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
        />
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_imageView" android:id="@+id/fragment_login_emailTextInput"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorPrimary"
                style="@style/StyledEditText">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="textEmailAddress" android:id="@+id/fragment_login_emailField"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_emailTextInput" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:id="@+id/fragment_login_passwordTextInput"
                android:backgroundTint="@color/colorPrimary"
                style="@style/StyledEditText">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="textPassword" android:id="@+id/fragment_login_passwordField"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:text="@string/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_login_loginButton" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_passwordTextInput"
                android:background="@color/colorPrimary"/>
        <TextView
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_login_forgotPasswordTV" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/fragment_login_loginButton"
                android:layout_marginTop="32dp"
                android:clickable="true"/>
        <TextView
                android:text="@string/create_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_login_createAccountTV" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_forgotPasswordTV"
                android:layout_marginTop="16dp"
                android:clickable="true"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/qrcode" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
